# inspur-dbus-interfaces

./: Makefile.am  README.md  configure.ac  generate_makefile.sh  inspur-dbus-interfaces.pc.in
